TP8-Tavarifun/tests/bad/option/t00.ml
let x : int option = 1 ;;
